# plover-abstract-filters

./: README.md  plover-abstract-filters.cabal  plover-filter.cabal  stack.yaml
src/Language/Plover/: Filter.hs
